--- a/src/demo.css
+++ b/src/demo.css
@@ -1,105 +1,106 @@
-.axis path {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 1px;
-  shape-rendering: crispEdges;
+html, body {
+  height: 100%;
 }
 
-.axis line {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 1px;
-  shape-rendering: crispEdges;
+body {
+  margin: 0;
+  font-family: Arial;
+  overflow: hidden;
 }
 
-.legendText, .axis text {
-  font-size: 8px;
-  fill: #fff;
+a {
+  color: #ffffff;
 }
 
 #menu {
   position: absolute;
-  bottom: 20px;
+  bottom: 50px;
   width: 100%;
   text-align: center;
 }
 
-.dataPoint {
-  fill: orange;
-  stroke: none;
-}
-
-.dataPoint:hover{
-  stroke: white;
-  stroke-width: 2px;
-}
-
 .element {
-  width: 230px;
+  width: 120px;
   height: 160px;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(0,0,0,.75);
-  border: 2px solid rgba(127,255,255,0.25);
-  border-radius: 8px;
-  text-align: center;
+  /*	box-shadow: 0px 0px 20px rgba(0,255,255,0.5); */
+  border: 1px solid rgba(127,255,255,0.25);
   cursor: default;
 }
 
 .element:hover {
-  box-shadow: 0px 0px 12px rgba(0,255,255,0.75);
-  border: 1px solid rgba(127,255,255,0.75);
+  /*		box-shadow: 0px 0px 20px rgba(0,255,255,0.75); */
+  border: 1px solid rgba(127,255,255,1);
 }
 
-.element svg {
+.element .number {
   position: absolute;
   top: 20px;
-  left: 2px;
-  right: 0px;
-}
-
-.element .investData {
-  position: absolute;
-  top: 35px;
-  left: 0px;
-  right: 0px;
-  font-size: 40px;
-  color: rgba(255,255,255,0.75);
-}
-
-.element .investLabel {
-  position: absolute;
-  top: 76px;
-  left: 12px;
-  right: 0px;
-  font-size: 8px;
-  color: rgba(255,255,255,0.75);
-}
-
-.element .chartTitle {
-  position: absolute;
-  top: 5px;
-  left: 0px;
-  right: 0px;
+  right: 20px;
   font-size: 12px;
   color: rgba(127,255,255,0.75);
 }
 
+.element .symbol {
+  position: absolute;
+  top: 40px;
+  width: 100%;
+  font-size: 60px;
+  text-align: center;
+  color: rgba(255,255,255,0.75);
+  font-weight: bold;
+}
+
+.element .details {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  font-size: 12px;
+  text-align: center;
+  color: rgba(127,255,255,0.75);
+}
+
 button {
-  color: #333;
-  background-color: rgba(127,255,255,1);
-  outline: 1px solid rgba(0,0,0,.75);
+  color: rgba(127,255,255,0.75);
+  background: transparent;
+  outline: 1px solid rgba(127,255,255,0.75);
   border: 0px;
   padding: 5px 10px;
   cursor: pointer;
 }
-
 button:hover {
-  background-color: rgba(255,255,255,1);
+  background-color: rgba(0,255,255,0.5);
 }
-
 button:active {
   color: #000000;
-  background-color: rgba(0,0,0,.75);
+  background-color: rgba(0,255,255,0.75);
+}
+
+iframe {
+  z-index: -1000;
+}
+
+#description {
+  pointer-events: auto;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  padding: 10px;
+  background-color:rgba(255,255,255,0.7);
+  -webkit-backdrop-filter: blur(5px);
+  position:absolute;
+  bottom: 0px;
+}
+
+.argon-focus #hud {
+  transition: opacity 0.8s;
+  visibility: visible;
+  opacity: 1;
+}
+
+.argon-no-focus #hud {
+  transition: visibility 0s linear 0.8s, opacity 0.8s;
+  visibility: visible;
+  opacity: 0;
+}
+
+#hud {
+  pointer-events: auto;
 }
