--- a/src/demo.css
+++ b/src/demo.css
@@ -18,6 +18,17 @@ a {
 
 textPath.legend {
     font-size: .5em;
+    fill: white;
+}
+
+path.arc {
+    stroke: white;
+    stroke-width: 2px;
+}
+
+circle.background {
+    fill: grey;
+    opacity: .7;
 }
 
 #menu {
