--- a/src/demo.css
+++ b/src/demo.css
@@ -13,7 +13,7 @@ a {
 }
 
 .radar {
-    opacity: .5;
+    opacity: .9;
 }
 
 textPath.legend {
@@ -25,7 +25,7 @@ textPath.legend {
 text.item {
     font-size: 1.5em;
     font-weight: bolder;
-    fill: white;
+    fill: black;
 }
 
 polygon.item {
