--- a/public/slides/anime/style.css
+++ b/public/slides/anime/style.css
@@ -15,7 +15,16 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  background-color: black;
 }
+
+div.title {
+  position: absolute;
+  top: .5em;
+  left: .5em;
+  font-size: 5em;
+}
+
 .output {
   display: -webkit-box;
   display: -ms-flexbox;
