--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 .slidecounter {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
+    z-index: 10000;
     background-color: grey;
     color: white;
     opacity: .5;
